force-app/main/default/objects/BMCServiceDesk__DiscoveryImportLog__c/BMCServiceDesk__DiscoveryImportLog__c.object-meta.xml
<CustomObject>
    <description>Stores details about the import of discovered devices.</description>
    <label>Discovery Import Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Discovery Import Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Import Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>