force-app/main/default/objects/BMCServiceDesk__DiscoveryImportLog__c/fields/BMCServiceDesk__ImportDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ImportDate__c</fullName>
    <description>Stores successful import dates and time</description>
    <inlineHelpText>Stores successful import dates and time</inlineHelpText>
    <label>Import Date</label>
    <type>DateTime</type>
</CustomField>