force-app/main/default/objects/BMCServiceDesk__DiscoveryImportLog__c/fields/BMCServiceDesk__NextRunCMDBClass__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NextRunCMDBClass__c</fullName>
    <label>Next Run CMDBClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>