force-app/main/default/objects/BMCServiceDesk__DiscoveryImportLog__c/fields/BMCServiceDesk__NextRunOffset__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NextRunOffset__c</fullName>
    <label>Next Run Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>