force-app/main/default/objects/BMCServiceDesk__DiscoveryImportLog__c/fields/BMCServiceDesk__RecordsInserted__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecordsInserted__c</fullName>
    <description>Stores the number of records inserted during import</description>
    <inlineHelpText>Stores the number of records inserted during import</inlineHelpText>
    <label>Records Inserted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>