force-app/main/default/objects/BMCServiceDesk__DiscoveryImportLog__c/fields/BMCServiceDesk__RecordsReconciled__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RecordsReconciled__c</fullName>
    <description>Stores the number of reconciled records during an import job</description>
    <inlineHelpText>Stores the number of reconciled records during an import job</inlineHelpText>
    <label>Records Reconciled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>