force-app/main/default/objects/BMCServiceDesk__DiscoveryImportLog__c/fields/BMCServiceDesk__TotalRecordsAffected__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TotalRecordsAffected__c</fullName>
    <description>Stores the total number of records inserted and updated</description>
    <formula>BMCServiceDesk__RecordsInserted__c  +  BMCServiceDesk__RecordsUpdated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stores the total number of records inserted and updated</inlineHelpText>
    <label>Total Records Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>